--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo list</title>
 </head>
 <body>
+    <h1>TODO LIST</h1>
+    <ul>
+        <li>new - add a todo</li>
+        <li>list - list all todos</li>
+        <li>delete - remove specific todo</li>
+        <li>quit - quit app</li>
+    </ul>
     <script src="./script.js"></script>
 </body>
 </html>
